# opencv-project-team_5

./: .gitignore  CMakeLists.txt  README.md
src/: HistogramEqualization.cpp  HistogramEqualization.h  MainWindow.cpp  MainWindow.h  Thresholding.cpp  Thresholding.h  main.cpp
